<resources>
    <string name="app_name">Newspaper Sudoku</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="background">background</string>
    <string name="new_game">New game</string>
    <string name="continue_txt">Continue</string>
    <string name="sudoku_solver">Sudoku Solver</string>
    <string name="solver">Solver</string>
    <string name="created_boards">Created Boards</string>

    <string name="loading">Loading Board…</string>
    <string name="main_menu">Main Menu</string>
    <string name="easy">Easy</string>
    <string name="intermediate">Intermediate</string>
    <string name="hard">Hard</string>
    <string name="expert">Expert</string>

    <string name="dark_theme">Dark Theme 🔳️</string>
    <string name="light_theme">Light Theme 🔲</string>
    <string name="this_cannot_be_undone">This cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="delete_board">Delete Board?</string>
    <string name="restart_board">Restart Board?</string>
    <string name="resume">Resume</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="restart">Restart</string>
    <string name="main_menu_header">Newspaper Sudoku🗞 📰</string>
    <string name="note">Note</string>
    <string name="hint">Hint</string>
    <string name="solve">Solve</string>
    <string name="back">Back</string>
    <string name="no_board_to_continue">No board to continue.</string>
</resources>