<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="sudokuGame"
            type="com.fantasmaplasma.sudoku.game.SudokuGame" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.SudokuFragment">

        <com.fantasmaplasma.sudoku.view.SudokuBoardView
            android:id="@+id/game_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="7dp"
            app:layout_constraintBottom_toTopOf="@id/numbers_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/mistake_management_layout"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="6dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/numbers_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/numbers_layout">

            <ImageButton
                android:id="@+id/undo_btn"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:onClick="@{() -> sudokuGame.undo()}"
                android:src="@drawable/ic_undo_selector"
                android:text="@string/_1" />

            <ImageButton
                android:id="@+id/redo_btn"
                style="@style/numberButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:onClick="@{() -> sudokuGame.redo()}"
                android:src="@drawable/ic_redo_selector"
                android:text="@string/_1" />

            <ImageButton
                android:id="@+id/delete_btn"
                style="@style/numberButton"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_circle"
                android:onClick="@{() -> sudokuGame.delete()}"
                android:src="@drawable/ic_delete_selector"
                android:text="@string/_1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/numbers_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="6dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/help_layout"
            app:layout_constraintStart_toEndOf="@id/mistake_management_layout"
            app:layout_constraintTop_toBottomOf="@id/game_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_btn_1"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> sudokuGame.handleInput(1)}"
                    android:text="@string/_1" />

                <Button
                    android:id="@+id/number_btn_2"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> sudokuGame.handleInput(2)}"
                    android:text="@string/_2" />

                <Button
                    android:id="@+id/number_btn_3"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> sudokuGame.handleInput(3)}"
                    android:text="@string/_3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_btn_4"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> sudokuGame.handleInput(4)}"
                    android:text="@string/_4" />

                <Button
                    android:id="@+id/number_btn_5"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> sudokuGame.handleInput(5)}"
                    android:text="@string/_5" />

                <Button
                    android:id="@+id/number_btn_6"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> sudokuGame.handleInput(6)}"
                    android:text="@string/_6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_btn_7"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> sudokuGame.handleInput(7)}"
                    android:text="@string/_7" />

                <Button
                    android:id="@+id/number_btn_8"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> sudokuGame.handleInput(8)}"
                    android:text="@string/_8" />

                <Button
                    android:id="@+id/number_btn_9"
                    style="@style/numberButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{() -> sudokuGame.handleInput(9)}"
                    android:text="@string/_9" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_layout"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:orientation="vertical"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/numbers_layout">

            <RelativeLayout
                android:id="@+id/help_btn"
                style="@style/numberButton"
                android:background="@drawable/btn_circle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:onClick="@{() -> sudokuGame.setAnswerForSelected()}"
                android:contentDescription="@string/hint"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/help_btn_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="16dp"
                    android:src="@drawable/ic_hint_selector"
                    android:background="@android:color/transparent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_above="@id/help_btn_tv"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/help_btn_tv"
                    android:layout_width="match_parent"
                    android:layout_height="16sp"
                    android:singleLine="true"
                    android:gravity="center"
                    android:layout_alignParentBottom="true"
                    android:textSize="12sp"
                    app:autoSizeMaxTextSize="12sp"
                    app:autoSizeMinTextSize="4sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform"
                    android:text="@string/hint"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/notes_btn"
                style="@style/numberButton"
                android:background="@drawable/btn_circle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:onClick="@{() -> sudokuGame.changeNoteTakingState()}"
                android:contentDescription="@string/note"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/notes_btn_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notes"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/notes_btn_tv"
                    android:layout_width="match_parent"
                    android:layout_height="16sp"
                    android:singleLine="true"
                    android:gravity="center"
                    android:textSize="12sp"
                    app:autoSizeMaxTextSize="12sp"
                    app:autoSizeMinTextSize="6sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform"
                    android:text="@string/note"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>